# zippy

./: .gitignore  Cargo.toml  ROADMAP.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  performance.yml
app/zippy-console/: index.html  package-lock.json  package.json  vite.config.ts
app/zippy-console/src/: App.tsx  main.tsx  react-app-env.d.ts
crates/zippy-core/: Cargo.toml  build.rs
crates/zippy-core/src/: bus_frame.rs  bus_protocol.rs  config.rs  control_transport.rs  endpoint.rs  engine.rs  error.rs  lib.rs  logging.rs  master_client.rs  metrics.rs  publisher.rs  queue.rs  runtime.rs  schema.rs  source.rs  spsc_data_queue.rs  table.rs  types.rs  version.rs
crates/zippy-core/tests/: bus_frame.rs  config.rs  control_endpoint.rs  control_transport.rs  core_contract.rs  logging.rs  master_client.rs  queue_try_recv.rs  runtime_fast_path.rs  runtime_lifecycle.rs  source_runtime.rs  spsc_data_queue.rs  table_view.rs  versioning.rs  workspace_smoke.rs
crates/zippy-engines/: Cargo.toml
crates/zippy-engines/benches/: crosssectional_pipeline.rs  key_value_materializer.rs  reactive_pipeline.rs  stream_table_sharding.rs  timeseries_pipeline.rs
crates/zippy-engines/src/: bar_generator.rs  cross_sectional.rs  cross_sectional_bucket.rs  latest_state.rs  lib.rs  reactive.rs  reactive_latest.rs  stream_table.rs  stream_table_shard.rs  table_view.rs  testing.rs  timeseries.rs
crates/zippy-engines/tests/: bar_generator_engine.rs  cross_sectional_engine.rs  reactive_engine.rs  reactive_latest_engine.rs  replay_determinism.rs  stream_table_engine.rs  stream_table_materializer.rs  timeseries_engine.rs
crates/zippy-gateway/: Cargo.toml
crates/zippy-gateway/src/: lib.rs
crates/zippy-gateway/tests/: native_gateway.rs
crates/zippy-io/: Cargo.toml
crates/zippy-io/src/: lib.rs  parquet_sink.rs  publisher.rs  zmq.rs
crates/zippy-io/tests/: parquet_sink.rs  zmq_roundtrip.rs  zmq_source.rs
crates/zippy-master/: Cargo.toml
crates/zippy-master/src/: bus.rs  daemon.rs  lib.rs  main.rs  registry.rs  ring.rs  server.rs  snapshot.rs
crates/zippy-master/tests/: bus_ring.rs  control_transport_roundtrip.rs  master_binary.rs  master_bus_perf_smoke.rs  master_client_roundtrip.rs  master_server.rs
crates/zippy-operator-runtime/: Cargo.toml
crates/zippy-operator-runtime/src/: dispatcher.rs  lib.rs  operator.rs  partition_runtime.rs  reader.rs  result.rs  state.rs
crates/zippy-operator-runtime/tests/: partition_runtime.rs  workspace_smoke.rs
crates/zippy-operators/: Cargo.toml
crates/zippy-operators/src/: aggregation.rs  cross_sectional.rs  expression.rs  lib.rs  reactive.rs
crates/zippy-operators/tests/: cross_sectional_factors.rs  reactive_factors.rs
crates/zippy-perf/: Cargo.toml  README.md
crates/zippy-perf/src/: lib.rs  main.rs
crates/zippy-python/: Cargo.toml  build.rs
crates/zippy-python/src/: lib.rs  native_source_bridge.rs
crates/zippy-segment-store/: Cargo.toml
crates/zippy-segment-store/src/: active_reader.rs  arrow_bridge.rs  builder.rs  catalog.rs  debug.rs  descriptor.rs  layout.rs  lib.rs  lifecycle.rs  notify.rs  perf.rs  persistence.rs  schema.rs  segment.rs  shm.rs  view.rs
crates/zippy-segment-store/tests/: active_segment.rs  active_segment_reader.rs  arrow_bridge.rs  lifecycle_notify.rs  openctp_segment_perf_smoke.rs  parquet_persistence.rs  partition_api.rs  partition_writer_api.rs  runtime_writer.rs  schema_layout.rs  shm_region.rs  workspace_smoke.rs
docs/: ROADMAP.md  audit_closure_2026-05-10.md  audit_findings_2026-05-08.md  complexity_hotspots_checklist_2026-05-29.md  control_plane_lifecycle_runbook.md  cross-platform-remote-gateway-design.md  keyvalue-table-changelog-refactor-design.md  level2_capacity_review_2026-06-12.md  local_market_data_center_zippy_upgrade_plan.md  low_latency_write_path_design_2026-06-12.md  performance_audit_findings_2026-05-12.md  performance_audit_fix_status_2026-05-12.md  remote_gateway_windows_smoke_runbook.md  stream-table-sharding.md  table-publish-api-refactor-design.md  windows-availability-design.md
docs/perf_reports/: 2026-06-13-low-latency-path-baseline.md
docs/superpowers/plans/: 2026-04-02-zippy-v1-implementation.md  2026-04-04-crosssectional-engine.md  2026-04-04-python-policy-constants.md  2026-04-04-timeseries-expression.md  2026-04-07-source-trait-and-zmq-source.md  2026-04-08-zippy-openctp-bootstrap.md  2026-04-09-logging-system.md  (+17 more)
examples/: examples_guide.md
examples/01_quickstart/: 01_connect_and_read_table.py  02_create_stream_table_with_pipeline.py  03_run_pipeline_forever.py
examples/02_stream_table/: 01_persisted_stream_table.py  02_drop_table.py
examples/03_query/: 01_query_tail_collect.py  02_query_expressions_and_dataframe.py
examples/04_subscribe/: 01_subscribe_rows.py  02_subscribe_table.py
examples/05_engines/: 01_reactive_latest_session.py  02_timeseries_and_cross_sectional.py  03_named_stream_timeseries_session.py  04_named_stream_cross_sectional_session.py
examples/06_replay/: 01_parquet_replay_to_stream_table.py  02_replay_parity_check.py  03_replay_to_reactive_latest_engine.py
examples/07_ops/: 01_table_observability.py  02_table_perf_probe.py  03_subscribe_latency_probe.py  04_consumer_wait_for_table.py  05_table_health_check.py
examples/08_remote_gateway/: 01_start_gateway_server.py  02_remote_writer.py  03_remote_subscribe_and_query.py  04_remote_subscribe_perf_probe.py  04_standalone_windows_smoke_client.py  05_remote_subscribe_perf_probe.py  06_remote_subscribe_rows_perf_probe.py
examples/python/: README.md  archive_reactive.py  cross_sectional_pipeline.py  publish_pipeline.py  remote_pipeline.py  stream_table_pipeline.py  subscribe_bars.py
pytests/: test_control_uri.py  test_python_api.py  test_python_cli.py  test_python_pm_cli.py  test_standalone_gateway_smoke_client.py
python/zippy/: __init__.py  __main__.py  _internal.pyi  cli.py  cli_common.py  cli_gateway.py  cli_master.py  cli_pm.py  cli_stream.py  cli_table.py  cli_webui.py  pm_bridge.py  remote_gateway_perf.py  webui.py
scripts/: cargo-test-python-lib-runner.sh
(+53 files in other folders)
