[workspace]
members = [
    "crates/zippy-core",
    "crates/zippy-operators",
    "crates/zippy-engines",
    "crates/zippy-io",
    "crates/zippy-gateway",
    "crates/zippy-python",
    "crates/zippy-perf",
    "crates/zippy-master",
    "crates/zippy-segment-store",
    "crates/zippy-operator-runtime",
]
exclude = [
    "vendor/zippy-shm-bridge",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
arrow = "53.3.0"
crossbeam-channel = "0.5.15"
parquet = "53.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"
