[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "zippy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["polars>=1.25.0", "pyarrow>=18.0.0"]

[project.optional-dependencies]
dev = ["maturin>=1.7,<2.0", "pytest>=8.3.0"]

[tool.maturin]
module-name = "zippy._internal"
python-source = "python"
manifest-path = "crates/zippy-python/Cargo.toml"
