[package]
name = "zippy-core"
version.workspace = true
edition.workspace = true

[dependencies]
arrow.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zippy-shm-bridge = { path = "../../vendor/zippy-shm-bridge" }
zippy-segment-store = { path = "../zippy-segment-store" }

[dev-dependencies]
tempfile = "3"
