[package]
name = "zippy-engines"
version.workspace = true
edition.workspace = true

[dependencies]
arrow.workspace = true
md5 = "0.7"
parquet.workspace = true
serde_json.workspace = true
tracing.workspace = true
zippy-core = { path = "../zippy-core" }
zippy-operators = { path = "../zippy-operators" }
zippy-segment-store = { path = "../zippy-segment-store" }

[dev-dependencies]
criterion = "0.5"
tracing-subscriber.workspace = true

[[bench]]
name = "reactive_pipeline"
harness = false

[[bench]]
name = "timeseries_pipeline"
harness = false

[[bench]]
name = "crosssectional_pipeline"
harness = false

[[bench]]
name = "key_value_materializer"
harness = false
