[package]
name = "zippy-master"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
signal-hook = { version = "0.3", features = ["iterator"] }
tracing.workspace = true
zippy-core = { path = "../zippy-core" }

[dev-dependencies]
arrow.workspace = true
libc = "0.2"
tempfile = "3"
