[package]
name = "zippy-master"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zippy-core = { path = "../zippy-core" }
zippy-shm-bridge = { path = "../../vendor/zippy-shm-bridge" }

[dev-dependencies]
arrow.workspace = true
tempfile = "3"

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", features = ["iterator"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
