[package]
name = "zippy-master"
version.workspace = true
edition.workspace = true

[dependencies]
arrow.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zippy-core = { path = "../zippy-core" }
zippy-gateway = { path = "../zippy-gateway" }
zippy-segment-store = { path = "../zippy-segment-store" }

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", features = ["iterator"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
