[package]
name = "zippy-python"
version.workspace = true
edition.workspace = true

[lib]
name = "zippy_internal"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
pyo3 = { version = "0.22" }
serde_json.workspace = true
tracing.workspace = true
zippy-core = { path = "../zippy-core" }
zippy-engines = { path = "../zippy-engines" }
zippy-gateway = { path = "../zippy-gateway" }
zippy-io = { path = "../zippy-io", features = ["zmq-publisher"] }
zippy-master = { path = "../zippy-master" }
zippy-operators = { path = "../zippy-operators" }
zippy-segment-store = { path = "../zippy-segment-store" }

[build-dependencies]
pyo3-build-config = "0.22"
