[package]
name = "zippy-segment-store"
version.workspace = true
edition.workspace = true

[dependencies]
arrow.workspace = true
parquet.workspace = true
serde.workspace = true
shared_memory = "0.12.4"
rustix = { version = "0.38", features = ["event", "fs"] }
thiserror.workspace = true
tracing.workspace = true
