[package]
name = "zippy-segment-store"
version.workspace = true
edition.workspace = true

[dependencies]
arrow.workspace = true
crossbeam-channel.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
] }
